--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 * Limit button checking to 32 instead of 64?  Or add 32 more joystick buttons.
 * Try batching USB messages, see if it improves timing
 * Look at timing code in SM/oITG sources
+TODO.bak
