--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 * Boost input priority - see if it helps?
-* Turn off out_imm in driver
-* Implement ioctl?
 * Get initial button state in SM without generating events
 * Limit button checking to 32 instead of 64?  Or add 32 more joystick buttons.
 * Try batching USB messages, see if it improves timing
-* Look at timing code in SM/oITG sources
-TODO.bak
+* Use a timeout to send outputs if no input requested within <timeout> ms
+* Reset lights when device is closed
+* Don't call write if lights haven't changed?  Comparing code in LightsState?
+* Don't do locking if lights haven't changed?
+* More fine-grained locking on outputs and on intf?
+* Have read operate on a copy of outputs
